# code

c++/editer/: CMakeLists.txt  build_msvc.bat  config.cfg  config.json  setup.bat
c++/editer/assets/: SUMMARY.txt  editer.rc  editer.res  resource.h
c++/editer/docs/: AI_USAGE.md  ARCHITECTURE.md  DEFENSE_SPEECH_V2.md  INSTALL.md  README.md  TEST.md
c++/editer/include/ai/: ai_chat.hpp  api_client.hpp
c++/editer/include/config/: config_interpreter.hpp
c++/editer/include/core/: buffer.hpp  editor.hpp
c++/editer/include/syntax/: cfg_highlighter.hpp  cpp_highlighter.hpp  highlighter.hpp  json_highlighter.hpp  language_detector.hpp  markdown_highlighter.hpp  python_highlighter.hpp  token_type.hpp
c++/editer/include/ui/: file_tree.hpp  focus_manager.hpp  layout_manager.hpp  renderer.hpp  syntax_renderer.hpp  terminal.hpp
c++/editer/include/utils/: config.hpp  logger.hpp  result.hpp
c++/editer/src/: file_tree.cpp  main.cpp  syntax_renderer.cpp
c++/editer/src/ai/: ai_chat.cpp  api_client.cpp
c++/editer/src/config/: config_interpreter.cpp
c++/editer/src/syntax/: cfg_highlighter.cpp  cpp_highlighter.cpp  json_highlighter.cpp  language_detector.cpp  markdown_highlighter.cpp  python_highlighter.cpp
c++/editer/src/ui/: terminal.cpp
c++/editer/test/: CMakeLists.txt  build_tests.bat  editer.conf  test_core.cpp  test_framework.hpp  test_main.cpp
